# tp_manager

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  bootstrap.sh  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: sdlc-central.json
.claude/config/: balance-sheet-config.json  gate-config.json
.claude/pipelines/: pipeline-state-design-to-plan.json  pipeline-state-feature-build.json  pipeline-state-feature-intake.json
.github/workflows/: ci.yml  deploy.yml
apps/aloha-worker/: Dockerfile  package.json
apps/api/: Dockerfile  openapi.json  package.json  tsconfig.json  vitest.config.ts
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/adr/: 0001-azure-container-apps.md  README.md  (+9 more)
reports/: review-latest-diff-2026-04-19.md  spec-review-v1.6-2026-04-19.md  spec-review-v1.6-post-gap-fix-2026-04-19.md  task-implementer-gaps-2026-04-19.md  task-implementer-gaps-verification-2026-04-20.md  task-implementer-wave1-2026-04-18.md  task-implementer-wave2-2026-04-19.md  task-implementer-wave3-2026-04-19.md  task-implementer-wave4-2026-04-19.md  task-implementer-wave5-2026-04-19.md  task-implementer-wave6-2026-04-19.md  task-implementer-waves7-10-2026-04-19.md
services/ml/: Dockerfile  pyproject.toml
services/ml/src/tp_ml/: __init__.py  cache.py  main.py  models.py  ocr.py
services/ml/tests/: test_cache.py  test_drivers.py  test_forecast_endpoint.py  test_health.py  test_models.py
(+332 files in other folders)
